# simple-pytorch-workflow

./: .gitignore  README.md  main.py  pyproject.toml
log/: log_configuration.py
models/: linear_regression_model.py
services/: data_service.py  model_service.py  visualization_service.py
